--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,11 @@
         <version>3.3.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
+<groupId>com.example</groupId>
+    <artifactId>twitter-app</artifactId>
+    <version>0.0.3</version>
+    <name>twitter-app</name>
+    <description>Demo project for Spring Boot</description>
     
 
     <properties>
