--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,11 @@
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
+    <!-- Spring Boot Starter -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
@@ -25,22 +27,25 @@
 
   <build>
     <plugins>
+      <!-- Compiler Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <source>17</source>
-          <target>17</target>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
         </configuration>
       </plugin>
 
+      <!-- Surefire Plugin for Unit Tests -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
       </plugin>
 
+      <!-- JAR Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -49,9 +54,10 @@
     </plugins>
   </build>
 
+  <!-- Nexus Deployment Info -->
   <distributionManagement>
     <repository>
-      <id>maven-releases</id> <!-- must match server id in settings.xml -->
+      <id>maven-releases</id> <!-- Must match settings.xml credentials ID -->
       <url>http://16.171.115.25:8081/repository/maven-releases/</url>
     </repository>
   </distributionManagement>
